--- a/PersonalSite/assets/css/style.css
+++ b/PersonalSite/assets/css/style.css
@@ -366,10 +366,10 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 100%;
-  height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
-  background-size: cover;
+    width: 100%;
+    height: 100vh;
+    background: url("../img/scott-webb-qauaqihMwpc-unsplash.jpg") top right;
+    background-size: cover;
 }
 #hero .container {
   padding-top: 70px;
@@ -382,15 +382,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero h1 {
   margin: 0;
-  font-size: 48px;
+  font-size: 60px;
   font-weight: 700;
-  line-height: 56px;
-  color: #222222;
+  line-height: 68px;
+  color: #FFFFFF;
 }
 #hero h2 {
-  color: #6f6f6f;
-  margin: 10px 0 0 0;
-  font-size: 22px;
+    color: #FFFFFF;
+    margin: 10px 0 0 0;
+    font-size: 34px;
 }
 #hero .btn-about {
   font-family: "Raleway", sans-serif;
@@ -414,6 +414,15 @@ h1, h2, h3, h4, h5, h6 {
     background-attachment: fixed;
   }
 }
+#hero:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
 @media (max-width: 992px) {
   #hero:before {
     content: "";
@@ -424,14 +433,16 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     right: 0;
   }
-  #hero h1 {
-    font-size: 28px;
-    line-height: 36px;
-  }
-  #hero h2 {
-    font-size: 18px;
-    line-height: 24px;
-  }
+    #hero h1 {
+        font-size: 28px;
+        line-height: 36px;
+        color: #222222;
+    }
+    #hero h2 {
+        font-size: 18px;
+        line-height: 24px;
+        color: #6f6f6f;
+    }
 }
 
 /*--------------------------------------------------------------
