--- a/PersonalSite/assets/css/style.css
+++ b/PersonalSite/assets/css/style.css
@@ -370,6 +370,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 100vh;
     background: url("../img/scott-webb-qauaqihMwpc-unsplash.jpg") top right;
     background-size: cover;
+    display: inline-block;
 }
 #hero .container {
   padding-top: 70px;
@@ -382,15 +383,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero h1 {
   margin: 0;
-  font-size: 60px;
+  font-size: 50px;
   font-weight: 700;
-  line-height: 68px;
+  line-height: 58px;
   color: #FFFFFF;
 }
 #hero h2 {
     color: #FFFFFF;
     margin: 10px 0 0 0;
-    font-size: 34px;
+    font-size: 30px;
 }
 #hero .btn-about {
   font-family: "Raleway", sans-serif;
@@ -443,6 +444,10 @@ h1, h2, h3, h4, h5, h6 {
         line-height: 24px;
         color: #6f6f6f;
     }
+}
+#heroImg {
+    display: inline-block;
+    clear: right;
 }
 
 /*--------------------------------------------------------------
