Added JQueryUI accordion to Technical Skills section of About.html.

--- a/PersonalSite/assets/css/custom.css
+++ b/PersonalSite/assets/css/custom.css
@@ -1,9 +1,79 @@
-﻿.classmate-img {
-    max-height: 200px;
-    max-width: 200px;
-    border-radius: 50%;
+﻿/****************
+*** SITE-WIDE ***
+*****************/
+
+#header {
+    background: #DDD;
+    box-shadow: 0px 0px 25px 0 rgba(0, 0, 0, 0.08);
+    z-index: 997;
+    padding: 15px 0;
 }
+
+/***********
+*** HOME ***
+************/
+
+#hero:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+@media (max-width: 992px) {
+    #hero:before {
+        content: "";
+        background: rgba(255, 255, 255, 0.8);
+        position: absolute;
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+
+    #hero h1 {
+        font-size: 28px;
+        line-height: 36px;
+        color: #222222;
+    }
+
+    #hero h2 {
+        font-size: 18px;
+        line-height: 24px;
+        color: #6f6f6f;
+    }
+}
+#heroImg {
+    display: inline-block;
+    clear: right;
+}
+
+/************
+*** ABOUT ***
+*************/
+
+#accordion h3 {
+    cursor: pointer;
+    background-color: #DDD;
+    color: #888;
+    padding: 3px;
+}
+
+#accordion h3:hover {
+    color: #000;
+}
+
+/*****************
+*** CLASSMATES ***
+******************/
 
 #classmates-section {
     padding: 60px 0;
+}
+.classmate-img {
+    max-height: 200px;
+    max-width: 200px;
+    border-radius: 50%;
 }
