--- a/PersonalSite/assets/css/custom.css
+++ b/PersonalSite/assets/css/custom.css
@@ -9,6 +9,19 @@
     padding: 15px 0;
 }
 
+.btn-hero {
+    font-family: "Raleway", sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 15px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 40px;
+    border-radius: 50px;
+    color: #fff;
+    background: #34b7a7;
+}
+
 /***********
 *** HOME ***
 ************/
